Update publisher name

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "handlebars-formatter",
     "description": "Prettier formatting for Handlebars files",
     "version": "0.0.1",
-    "publisher": "mfeckie",
+    "publisher": "mfeckies",
     "repository": "https://github.com/mfeckie/handlebars-formatter.git", 
     "engines": {
         "vscode": "^1.25.0"
