--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
         "*"
     ],
     "main": "./out/extension",
-    "contributes": {
-    },
+    "contributes": {},
     "scripts": {
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
@@ -25,14 +24,14 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^3.1.3",
-        "vscode": "^1.1.21",
-        "tslint": "^5.8.0",
+        "@types/mocha": "^5.2.5",
         "@types/node": "^10.12.0",
-        "@types/mocha": "^5.2.5"
+        "tslint": "^5.8.0",
+        "typescript": "^3.1.3",
+        "vscode": "^1.1.36"
     },
     "dependencies": {
-        "@types/prettier": "^1.13.2",
-        "prettier": "^1.14.3"
+        "@types/prettier": "^1.18.1",
+        "prettier": "^1.18.2"
     }
 }
