--- a/package.json
+++ b/package.json
@@ -1,38 +1,42 @@
 {
-    "name": "handlebars-formatter",
-    "displayName": "handlebars-formatter",
-    "description": "Prettier formatting for Handlebars files",
-    "version": "0.0.3",
-    "publisher": "mfeckies",
-    "repository": "https://github.com/mfeckie/handlebars-formatter.git",
-    "engines": {
-        "vscode": "^1.25.0"
-    },
-    "categories": [
-        "Formatters"
-    ],
-    "activationEvents": [
-        "*"
-    ],
-    "main": "./out/extension",
-    "contributes": {
-    },
-    "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
-    },
-    "devDependencies": {
-        "typescript": "^3.1.3",
-        "vscode": "^1.1.21",
-        "tslint": "^5.8.0",
-        "@types/node": "^10.12.0",
-        "@types/mocha": "^5.2.5"
-    },
-    "dependencies": {
-        "@types/prettier": "^1.13.2",
-        "prettier": "^1.14.3"
-    }
+  "name": "handlebars-formatter",
+  "displayName": "handlebars-formatter",
+  "description": "Prettier formatting for Handlebars files",
+  "version": "0.0.3",
+  "publisher": "mfeckies",
+  "repository": "https://github.com/mfeckie/handlebars-formatter.git",
+  "engines": {
+    "vscode": "^1.38.0"
+  },
+  "categories": [
+    "Formatters"
+  ],
+  "activationEvents": [
+    "*"
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+	},
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/glob": "^7.1.1",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^10.12.21",
+    "@types/vscode": "^1.38.0",
+    "glob": "^7.1.4",
+    "mocha": "^6.1.4",
+    "typescript": "^3.3.1",
+    "tslint": "^5.12.1",
+    "vscode-test": "^1.2.0"
+  },
+  "dependencies": {
+    "@types/prettier": "^1.13.2",
+    "prettier": "^1.14.3"
+  }
 }
