--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/fs-extra": "^8.1.0",
-    "@types/glob": "^7.1.1",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.0.0",
-    "@types/prettier": "^2.0.0",
-    "@types/vscode": "^1.44.0",
+    "@types/fs-extra": "^9.0.1",
+    "@types/glob": "^7.1.3",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.6.4",
+    "@types/prettier": "^2.1.0",
+    "@types/vscode": "^1.48.0",
     "glob": "^7.1.6",
-    "mocha": "^7.1.1",
-    "tslint": "^6.1.1",
-    "typescript": "^3.8.3",
-    "vscode-test": "^1.3.0"
+    "mocha": "^8.1.3",
+    "tslint": "^6.1.3",
+    "typescript": "4.0.2",
+    "vscode-test": "^1.4.0"
   },
   "dependencies": {
-    "prettier": "^2.0.4"
+    "prettier": "^2.1.1"
   }
 }
