--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
     "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.6.4",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.0.0",
     "@types/prettier": "^2.1.0",
     "@types/vscode": "^1.48.0",
     "glob": "^7.1.6",
-    "mocha": "^8.1.3",
+    "mocha": "^9.0.0",
     "tslint": "^6.1.3",
-    "typescript": "4.0.2",
+    "typescript": "^4.4.0",
     "vscode-test": "^1.4.0"
   },
   "dependencies": {
